chart fixes (negative/entries)
In charts, negative values not showing
In charts, not all entries are spaced 30 mins apart.

--- a/website/css/main/style.css
+++ b/website/css/main/style.css
@@ -107,6 +107,24 @@ table{
 	text-align: center;
 }
 
+.title_large{
+	font-weight: bold;
+	font-size: 40px;
+	text-align: center;
+}
+
+.title_medium{
+	font-weight: bold;
+	font-size: 30px;
+	text-align: center;
+}
+
+.title_small{
+	font-weight: bold;
+	font-size: 25px;
+	text-align: center;
+}
+
 /* End Miscellaneous */
 
 /* Navigation */
@@ -161,7 +179,6 @@ a:active {
    color: white;
    font-family: 'Nunito', sans-serif;
    font-size: 18px;
- 	text-align: justify;
 }
 
 #home_info {
@@ -215,7 +232,7 @@ a:active {
 }
 
 #search_index{
-	width: 500px;
+	width: 600px;
 	margin: auto;
 	text-align: center;
 }
